<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:layout_weight="1">

	<LinearLayout android:id="@+id/linearLayout"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:orientation="vertical" android:padding="5dp">

		<EditText android:id="@+id/idEditText" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:textSize="20sp"
			android:hint="@string/hint_ID" android:imeOptions="actionNext">
		</EditText>

		<EditText android:id="@+id/firstNameEditText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_firstName" android:textSize="20sp"
			android:imeOptions="actionNext" android:inputType="textPersonName|textCapWords">
		</EditText>

		<EditText android:id="@+id/lastNameEditText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_lastName" android:textSize="20sp"
			android:imeOptions="actionDone" android:inputType="textPersonName|textCapWords">
		</EditText>

		<EditText android:id="@+id/emailEditText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_email" android:textSize="20sp"
			android:imeOptions="actionDone" android:inputType="textPersonName|textCapWords">
		</EditText>

		<Button android:id="@+id/saveContactButton"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:layout_marginTop="15dp"
			android:textSize="20sp" android:text="@string/button_update_contact">
		</Button>
	</LinearLayout>

</ScrollView>