<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content"
	android:layout_weight="1">

	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_margin="5dp"
		android:stretchColumns="1">

		<TableRow android:id="@+id/idTableRow" android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView android:id="@+id/idLabelTextView"
				android:textSize="20sp" style="@style/ContactLabelTextView"
				android:text="@string/label_id">
			</TextView>

			<TextView android:id="@+id/idTextView" android:textSize="20sp"
				style="@style/ContactTextView">
			</TextView>
		</TableRow>

		<TableRow android:id="@+id/firstNameTableRow"
			android:layout_width="match_parent" android:layout_height="wrap_content">

			<TextView android:id="@+id/firstNameLabelTextView"
				android:textSize="20sp" style="@style/ContactLabelTextView"
				android:text="@string/label_firstName">
			</TextView>

			<TextView android:id="@+id/firstNameTextView"
				android:textSize="20sp" style="@style/ContactTextView">
			</TextView>
		</TableRow>

		<TableRow android:id="@+id/lastNameTableRow"
			android:layout_width="match_parent" android:layout_height="wrap_content">

			<TextView android:id="@+id/lastNameLabelTextView"
				android:textSize="20sp" style="@style/ContactLabelTextView"
				android:text="@string/label_lastName">
			</TextView>

			<TextView android:id="@+id/lastNameTextView"
				android:textSize="20sp" style="@style/ContactTextView">
			</TextView>
		</TableRow>

		<TableRow android:id="@+id/emailTableRow"
			android:layout_width="match_parent" android:layout_height="wrap_content">

			<TextView android:id="@+id/emailLabelTextView"
				android:textSize="20sp" style="@style/ContactLabelTextView"
				android:text="@string/label_email">
			</TextView>

			<TextView android:id="@+id/emailTextView"
				android:textSize="20sp" style="@style/ContactTextView">
			</TextView>
		</TableRow>
	</TableLayout>

</ScrollView>